--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@reduxjs/toolkit": "^2.4.0",
+		"antd": "^5.22.5",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"jwt-decode": "^4.0.0",
+		"moment": "^2.30.1",
 		"next": "14.2.4",
 		"next-auth": "^4.24.11",
 		"next-themes": "^0.2.1",
@@ -37,6 +39,7 @@
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.54.0",
 		"react-redux": "^9.1.2",
+		"react-spinners": "^0.15.0",
 		"redux-persist": "^6.0.0",
 		"sonner": "^1.7.1"
 	},
