--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/code": "2.0.33",
+		"@nextui-org/drawer": "^2.2.7",
 		"@nextui-org/input": "2.2.5",
 		"@nextui-org/kbd": "2.0.34",
 		"@nextui-org/link": "2.0.35",
@@ -19,9 +20,9 @@
 		"@nextui-org/react": "^2.6.4",
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/switch": "2.0.34",
-		"@nextui-org/system": "2.2.6",
+		"@nextui-org/system": "^2.4.6",
 		"@nextui-org/tabs": "^2.2.2",
-		"@nextui-org/theme": "2.2.11",
+		"@nextui-org/theme": "^2.4.5",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@reduxjs/toolkit": "^2.4.0",
@@ -39,6 +40,8 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.54.0",
+		"react-icons": "^5.5.0",
+		"react-image-magnify": "^2.7.4",
 		"react-redux": "^9.1.2",
 		"react-spinners": "^0.15.0",
 		"redux-persist": "^6.0.0",
@@ -49,6 +52,7 @@
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
+		"@types/react-image-magnify": "^2.7.4",
 		"@types/react-stars": "^2.2.4",
 		"@typescript-eslint/eslint-plugin": "8.11.0",
 		"@typescript-eslint/parser": "8.11.0",
