--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"react-icons": "^5.5.0",
 		"react-image-magnify": "^2.7.4",
 		"react-redux": "^9.1.2",
+		"react-simple-star-rating": "^5.1.7",
 		"react-spinners": "^0.15.0",
 		"redux-persist": "^6.0.0",
 		"sonner": "^1.7.1"
