updated several files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
     "unused-imports/no-unused-vars": "off",
     "unused-imports/no-unused-imports": "warn",
     "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
