--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.1.1",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/drawer": "^2.2.7",
@@ -46,7 +47,8 @@
 		"react-simple-star-rating": "^5.1.7",
 		"react-spinners": "^0.15.0",
 		"redux-persist": "^6.0.0",
-		"sonner": "^1.7.1"
+		"sonner": "^1.7.1",
+		"zod": "^3.25.67"
 	},
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^15.0.3",
